# ChangeLog for schedule

*schedule-v7.0.4:
	Martin Väth <martin at mvath.de>:
	- Fix start-stop-daemon usage for openrc

*schedule-v7.0.3:
	Martin Väth <martin at mvath.de>:
	- internal: prefer each() and array-loops over index bookkeeping

*schedule-v7.0.2:
	Martin Väth <martin at mvath.de>:
	- Support separate start/stop options for openrc

*schedule-v7.0.1:
	Martin Väth <martin at mvath.de>:
	- Use openrc-run instead of deprecated runscript

*schedule-v7.0.0:
	Martin Väth <martin at mvath.de>:
	- Support logging (to syslog as well as to file)
	- Use logging in startup scripts
	- require_order of options (regression from v6.3.1)
	- Bump all file versions to 7.0.0

*schedule-v6.3.1:
	Martin Väth <martin at mvath.de>:
	- Change --qtime default to %R (no seconds)
	- Use gnu_getopt

*schedule-v6.3.0:
	Martin Väth <martin at mvath.de>:
	- Record and output queue/start/end time (with corresponding options)
	- internal: remove wrong prototypes in function definitions
	- internal: slightly simplify --text parsing

*schedule-v6.2.1:
	Martin Väth <martin at mvath.de>:
	- Use only recommended obj-syntax (no new ...)
	- Document versioning and that lib/Schedule/Connect.pm is version file

*schedule-v6.2.0:
	Martin Väth <martin at mvath.de>:
	- Support socket-based activation of (x)inetd/systemd.
	  Thanks a lot to Christian Mock <cm at tahina.priv.at> for explaining
	  how to convert a file descriptor into an IO::Socket object
	- Fix ignoring of signals

*schedule-v6.1.0:
	Martin Väth <martin at mvath.de>:
	- Default user/group is now "schedule"; "nobody" is only a fallback
	- Slurp the whole password file in binary mode (but chomp()) so that
	  multiline or binary passwords can be used
	- Ignore signals HUP, PIPE, USR1, USR2
	- Work around bugs of the broken systemd

*schedule-v6.0.2:
	Martin Väth <martin at mvath.de>:
	- Replace 'EOF' by 1 to avoid stupid new perl warning

*schedule-v6.0.1:
	Martin Väth <martin at mvath.de>:
	- Use perl-5.12 package versioning