@@ -1,2 +1,2 @@
-SCHEDULE_OPTS="-Y/etc/schedule.password"
-SCHEDULE_REMAIN="0"
+SCHEDULE_OPTS=-Y/etc/schedule.password
+SCHEDULE_REMAIN=0
