@@ -4,7 +4,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule::Client::Scheduleman v7.0.0;
+package Schedule::Client::Scheduleman v7.0.5;
 
 use strict;
 use warnings;
@@ -327,7 +327,7 @@ This is used by the B<schedule-tmux> script.
 The default of the options is taken from the environment variable
 B<SCHEDULE_OPTS>; shell-quoting in the value is supported.
 Moreover, (unquoted) environment variable references of the form $VAR
-or ${VAR} in it are (recursively) expanded.
+or $VAR in it are (recursively) expanded.
 
 =over 8
 
@@ -344,7 +344,7 @@ Use a unix domain socket (file) for IPC with the server.
 =item B<--file=>I<file> or B<-f> I<file>
 
 Use I<file> as a unix domain socket filename for IPC.
-The default is B<${TMPDIR}/schedule-${USER}/server>.
+The default is B<$TMPDIR/schedule-$USER/server>.
 This option implies B<--local> (unless overridden later on).
 
 =item B<--port=>I<port> or B<-P> I<port>
