@@ -1,10 +1,10 @@
 # /etc/conf.d/schedule
 
-schedule_user="schedule"
-schedule_group="schedule"
+schedule_user=schedule
+schedule_group=schedule
 
 # Options to pass to schedule-server/schedule at startup/stop (or both)
 # The options are eval'ed, so use quoting!
-schedule_start_opts="--syslog"
-schedule_stop_opts=""
-schedule_opts="-Y/etc/schedule.password"
+schedule_start_opts=--syslog
+schedule_stop_opts=
+schedule_opts=-Y/etc/schedule.password
